--- a/index.html
+++ b/index.html
@@ -1,68 +1,52 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Leonidas Esteban</title>
-    <link rel="icon" type="image/png" href="images/favicon.png" />
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hola soy saddam </title>
+</head>
+<body>
     <header>
-      <div>
-        <figure>
-          <img src="images/logo.png" alt="Logo de http://leonidasesteban.com" />
-        </figure>
-        <nav>
-          <ol>
-            <li>
-              <a href="./portafolio/index.html">Portafolio</a>
-            </li>
-            <li>
-              <a href="#eventos">Experiencia</a>
-            </li>
-            <li>
-              <a href="#contacto">Trabajemos juntos</a>
-            </li>
-          </ol>
-        </nav>
-      </div>
+        <div>
+            <figure>
+                <img src="images/logo.png" alt="logo">
+            </figure>
+            <nav>
+                <ol>
+                    <li><a href="#">Portafolio</a></li>
+                    <li><a href="#">Experiencia</a></li>
+                    <li><a href="#">trabajemos juntos</a></li>
+                </ol>
+            </nav>
+        </div>
     </header>
     <section>
-      <h1>
-        Hola! Soy <strong>Leonidas Esteban</strong> Desarrollador <br/> <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>
-      </h1>
-      <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"> 
+        <h1>Hola soy <strong>saddam montiel</strong>, desarrollador <br> <strong>javascript</strong> con pasion a los negocios.</h1> 
+        <img src="" alt="">   imagen de portadas    
     </section>
-    <section id="portafolio">
-      <h2>Portafolio (Proyectos Destacados)</h2>
-      <article>
-        <h3>Platzi Video</h3>
-        <h6>React Native / React</h6>
-        <p><small><strong>Fecha:</strong> 01/07/2018</small></p>
-        <p><small><strong>Pueds verlo en::</strong> www.platzi.com/native</small></p>
-        <p>Platzi Video fue el resultado de 3 meses de trabajo
-            para crear la mejor app para enseñar el funcionamiento
-            de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de nevegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma</p>
-      <img  width="500" src="images/platzi-video-react-native.png" alt="prouyecto del curso de React Native">
-      </article>
+    <section>
+        <h2>Portafolio  (Proyectos Destacados)</h2>
+        <article>
+            <h3>platzi videos</h3>
+            <h6>React Native / React</h6>
+            <p><small><strong>Fecha</strong> : 01/07/2020</small></p>
+            <p><small><strong>Puedes verlo en : <strong>www.platzi.com/native</strong></strong></small></p>
+            <p>Platzi Video fue el resultado de 3 meses de trabajo para crear la mejor app para enseñar el funcionamiento de React y React Native. Desde crear un vista-detalle, hasta patrones avanzados de navegación, este proyecto ha sido el ejemplo de futuros creadores de aplicaciones multiplataforma 
+           </p>
+        </article>
     </section>
-    <section id="eventos">
-      <h2>Más sobre mi experiencia</h2>
-      <article>
-        <figure>
-          <img src="images/platzi-conf.jpg" width="500" />
-        </figure>
-        <h3>PlatziConf México 2018</h3>
-        <p>El evento más grande sobre gente que quiere aprender más de internet. En esté evento te comparto como tener una vida de constante aprendizaje.</p>
-        <a href="https://www.youtube.com/watch?v=BIS7cWGgJg0" target="_blank">Ver Plática</a>
-      </article>
+    <section>
+        <h2>Más sobre mi Experiencia</h2>
+        <article>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <h3>platziconf mexico 2018</h3>
+            <p> El evento más grande sobre gente que quiere aprender más de internet. En este evento te comparto cómo tener una vida de constante aprendizaje.</p>
+            <a href="">ver platica</a>
+        </article>
     </section>
-    <section id="contacto">
-      <form action="/suscripcion/">
-        <h3>¿Creamos algo juntos?</h3>
-        <input type="text" placeholder="Déjame tu email" id="email">
-        <button>Enviar</button>
-      </form>
-    </section>
-    <footer>footer</footer>
-  </body>
+    <section>seccion contacto</section>
+    <footer></footer>
+</body>
 </html>
